src/test/ui/block-result/unexpected-return-on-unit.stderr
error[E0308]: mismatched types
  --> $DIR/unexpected-return-on-unit.rs:19:5
   |
LL |     foo() //~ ERROR mismatched types
   |     ^^^^^ expected (), found usize
   |
   = note: expected type `()`
              found type `usize`
help: try adding a semicolon
   |
LL |     foo(); //~ ERROR mismatched types
   |          ^
help: try adding a return type
   |
LL | fn bar() -> usize {
   |          ^^^^^^^^

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0308"
